# llm-lisa

./: LLM_Bias_Coach_Master.tex  Makefile  README.md  notes-to-self.md  pyproject.toml  pyrightconfig.json
src/llm_error_clusters/: main.py
src/llm_lisa/: main.py  sandbox_disable_ai.py
tests/: test_boris.py
