[project]
name = "llm-error-clusters"
version = "0.1.0"
description = ""
authors = [
    {name = "Boris Dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "print (>=1.3.0,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
